@@ -18,11 +18,14 @@ import org.junit.jupiter.api.Test;
 import org.mockito.Mockito;
 import su.svn.daybook.DataTest;
 import su.svn.daybook.domain.dao.I18nDao;
+import su.svn.daybook.domain.dao.I18nDao;
 import su.svn.daybook.domain.messages.Answer;
 import su.svn.daybook.domain.messages.ApiResponse;
 import su.svn.daybook.domain.model.I18n;
+import su.svn.daybook.domain.model.I18n;
 
 import javax.inject.Inject;
+import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
@@ -35,151 +38,155 @@ class I18nServiceTest {
 
     static I18nDao mock;
 
-    static Uni<Optional<I18n>> optionalUniTest = Uni.createFrom().item(Optional.of(DataTest.OBJECT_I18n_0));
+    static final Uni<Optional<I18n>> UNI_OPTIONAL_TEST = Uni.createFrom().item(Optional.of(DataTest.OBJECT_I18n_0));
 
-    static Uni<Optional<Long>> optionalUniId = Uni.createFrom().item(Optional.of(0L));
+    static final Multi<I18n> MULTI_TEST = Multi.createFrom().item(DataTest.OBJECT_I18n_0);
 
-    static Uni<Optional<Long>> optionalUniEmptyId = Uni.createFrom().item(Optional.empty());
+    static final Multi<I18n> MULTI_WITH_NULL = DataTest.createMultiWithNull(I18n.class);
 
-    static Multi<I18n> multiTest = Multi.createFrom().item(DataTest.OBJECT_I18n_0);
-
-    static Multi<I18n> multiEmpties = Multi.createFrom().empty();
-
-    static Multi<I18n> multiWithNull = Multi.createFrom().item(() -> null);
+    static final Multi<I18n> MULTI_EMPTIES = DataTest.createMultiEmpties(I18n.class);
 
     @BeforeEach
     void setUp() {
         mock = Mockito.mock(I18nDao.class);
-        Mockito.when(mock.findById(0L)).thenReturn(optionalUniTest);
+        Mockito.when(mock.findById(0L)).thenReturn(UNI_OPTIONAL_TEST);
         QuarkusMock.installMockForType(mock, I18nDao.class);
     }
 
     @Test
-    void testMethod_getAll() {
-        Mockito.when(mock.findAll()).thenReturn(multiTest);
-        List<Answer> result = service.getAll()
+    void testWhenGetAllThenSingletonList() {
+        Mockito.when(mock.findAll()).thenReturn(MULTI_TEST);
+        List<Answer> result = new ArrayList<>();
+        Assertions.assertDoesNotThrow(() -> result.addAll(service.getAll()
                 .subscribe()
                 .asStream()
-                .peek(actual -> Assertions.assertEquals(Answer.of(DataTest.OBJECT_I18n_0), actual))
-                .collect(Collectors.toList());
+                .peek(actual -> Assertions.assertEquals(Answer.of(DataTest.OBJECT_I18n_0), actual)).toList()));
         Assertions.assertTrue(result.size() > 0);
     }
 
     @Test
-    void testMethod_getAll_whithEmptyResult() {
-        Mockito.when(mock.findAll()).thenReturn(multiEmpties);
-        List<Answer> result = service.getAll()
+    void testWhenGetAllThenEmpty() {
+        Mockito.when(mock.findAll()).thenReturn(MULTI_EMPTIES);
+        List<Answer> result = new ArrayList<>();
+        Assertions.assertDoesNotThrow(() -> result.addAll(service.getAll()
                 .subscribe()
                 .asStream()
-                .collect(Collectors.toList());
+                .toList()));
         Assertions.assertEquals(0, result.size());
     }
 
     @Test
-    void testMethod_getAll_whithNullResult() {
-        Mockito.when(mock.findAll()).thenReturn(multiWithNull);
-        List<Answer> result = service.getAll()
+    void testWhenGetAllThenNull() {
+        Mockito.when(mock.findAll()).thenReturn(MULTI_WITH_NULL);
+        List<Answer> result = new ArrayList<>();
+        Assertions.assertDoesNotThrow(() -> result.addAll(service.getAll()
                 .subscribe()
                 .asStream()
-                .collect(Collectors.toList());
+                .toList()));
         Assertions.assertEquals(0, result.size());
     }
 
     @Test
-    void testMethod_i18nGet() {
-        service.i18nGet("0")
+    void testWhenGetThenEntry() {
+        Assertions.assertDoesNotThrow(() -> service.get(0L)
                 .onItem()
-                .invoke(actual -> Assertions.assertEquals(Answer.of(Optional.of(DataTest.OBJECT_I18n_0)), actual))
+                .invoke(actual -> Assertions.assertEquals(Answer.of(DataTest.OBJECT_I18n_0), actual))
                 .await()
-                .indefinitely();
+                .indefinitely());
     }
 
     @Test
-    void testMethod_i18nGet_whenNoNumberParameter() {
-        service.i18nGet("noNumber")
-                .onItem()
-                .invoke(actual -> Assertions.assertEquals(DataTest.ANSWER_ERROR_NoNumber, actual))
-                .await()
-                .indefinitely();
-    }
-
-    @Test
-    void testMethod_i18nGet_whenNullParameter() {
-        service.i18nGet(null)
+    void testWhenGetThenNullParameter() {
+        Assertions.assertDoesNotThrow(() -> service.get(null)
                 .onItem()
                 .invoke(actual -> Assertions.assertEquals(Answer.empty(), actual))
                 .await()
-                .indefinitely();
+                .indefinitely());
     }
 
     @Test
-    void testMethod_i18nAdd() {
-        var expected = Answer.of(new ApiResponse<>(0L));
-        Mockito.when(mock.insert(DataTest.OBJECT_I18n_0)).thenReturn(optionalUniId);
-        service.i18nAdd(DataTest.OBJECT_I18n_0)
+    void testWhenGetThenNoNumber() {
+        Assertions.assertDoesNotThrow(() -> service.get("noNumber")
+                .onItem()
+                .invoke(actual -> Assertions.assertEquals(Answer.noNumber("For input string: \"noNumber\""), actual))
+                .await()
+                .indefinitely());
+    }
+
+    @Test
+    void testWhenAddThenId() {
+        var expected = Answer.builder()
+                .error(201)
+                .payload(new ApiResponse<>(0L))
+                .build();
+        Mockito.when(mock.insert(DataTest.OBJECT_I18n_0)).thenReturn(DataTest.UNI_OPTIONAL_ZERO_LONG);
+        Assertions.assertDoesNotThrow(() -> service.add(DataTest.OBJECT_I18n_0)
                 .onItem()
                 .invoke(actual -> Assertions.assertEquals(expected, actual))
                 .await()
-                .indefinitely();
+                .indefinitely());
     }
 
     @Test
-    void testMethod_i18nAdd_whithEmptyResult() {
-        Mockito.when(mock.insert(DataTest.OBJECT_I18n_0)).thenReturn(optionalUniEmptyId);
-        service.i18nAdd(DataTest.OBJECT_I18n_0)
+    void testWhenAddThenEmpty() {
+        Mockito.when(mock.insert(DataTest.OBJECT_I18n_0)).thenReturn(DataTest.UNI_OPTIONAL_EMPTY_LONG);
+        Assertions.assertDoesNotThrow(() -> service.add(DataTest.OBJECT_I18n_0)
                 .onItem()
                 .invoke(actual -> Assertions.assertEquals(Answer.empty(), actual))
                 .await()
-                .indefinitely();
+                .indefinitely());
     }
 
     @Test
-    void testMethod_i18nPut() {
-        Mockito.when(mock.update(DataTest.OBJECT_I18n_0)).thenReturn(optionalUniId);
-        var expected = Answer.of(new ApiResponse<>(0L));
-        service.i18nPut(DataTest.OBJECT_I18n_0)
+    void testWhenPutThenId() {
+        var expected = Answer.builder()
+                .error(202)
+                .payload(new ApiResponse<>(0L))
+                .build();
+        Mockito.when(mock.update(DataTest.OBJECT_I18n_0)).thenReturn(DataTest.UNI_OPTIONAL_ZERO_LONG);
+        Assertions.assertDoesNotThrow(() -> service.put(DataTest.OBJECT_I18n_0)
                 .onItem()
                 .invoke(actual -> Assertions.assertEquals(expected, actual))
                 .await()
-                .indefinitely();
+                .indefinitely());
     }
 
     @Test
-    void testMethod_i18nPut_whithEmptyResult() {
-        Mockito.when(mock.update(DataTest.OBJECT_I18n_0)).thenReturn(optionalUniEmptyId);
-        service.i18nPut(DataTest.OBJECT_I18n_0)
+    void testWhenPutThenEmpty() {
+        Mockito.when(mock.update(DataTest.OBJECT_I18n_0)).thenReturn(DataTest.UNI_OPTIONAL_ZERO_LONG);
+        Assertions.assertThrows(RuntimeException.class, () -> service.put(DataTest.OBJECT_I18n_0)
                 .onItem()
                 .invoke(actual -> Assertions.assertEquals(Answer.empty(), actual))
                 .await()
-                .indefinitely();
+                .indefinitely());
     }
 
     @Test
-    void testMethod_i18nDelete() {
-        Mockito.when(mock.delete(0L)).thenReturn(optionalUniId);
+    void testWhenDeleteThenId() {
+        Mockito.when(mock.delete(0L)).thenReturn(DataTest.UNI_OPTIONAL_ZERO_LONG);
         var expected = Answer.of(new ApiResponse<>(0L));
-        service.i18nDelete("0")
+        Assertions.assertDoesNotThrow(() -> service.delete(0L)
                 .onItem()
                 .invoke(actual -> Assertions.assertEquals(expected, actual))
                 .await()
-                .indefinitely();
+                .indefinitely());
     }
 
     @Test
-    void testMethod_i18nDelete_whenNoNumberParameter() {
-        service.i18nDelete("noNumber")
+    void testWhenDeleteThenNoNumber() {
+        Assertions.assertDoesNotThrow(() -> service.delete("noNumber")
                 .onItem()
-                .invoke(actual -> Assertions.assertEquals(DataTest.ANSWER_ERROR_NoNumber, actual))
+                .invoke(actual -> Assertions.assertEquals(Answer.noNumber("For input string: \"noNumber\""), actual))
                 .await()
-                .indefinitely();
+                .indefinitely());
     }
 
     @Test
-    void testMethod_i18nDelete_whenNullParameter() {
-        service.i18nDelete(null)
+    void testWhenDeleteThenNullParameter() {
+        Assertions.assertDoesNotThrow(() -> service.delete(null)
                 .onItem()
                 .invoke(actual -> Assertions.assertEquals(Answer.empty(), actual))
                 .await()
-                .indefinitely();
+                .indefinitely());
     }
 }
